made projects, and header fixed

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -2,6 +2,7 @@
 	--background-color: #fff;
 	--text-color:#222;
 	--main-color:#5A4FCF;
+	--prjBox-hover-color: #eeeeee;
 }
 body{
 	margin-left: 10px;
@@ -13,11 +14,14 @@ body{
 body.dark-mode{
 	--background-color: #222;
 	--text-color: #fff;
+	--prjBox-hover-color: #333;
 }
 html{
 	overflow-x: hidden;
+	scroll-behavior: smooth;
+	overscroll-behavior-y: none;
 }
-span, a, h1, h2, h3, h4, h5, h6, button{
+span, a, h1, h2, h3, h4, h5, h6, button,div{
 	color: var(--text-color);
 }
 ::-webkit-scrollbar{
